--- a/appz.yml
+++ b/appz.yml
@@ -1,7 +1,7 @@
 app:
     name: Hello Node
     code: hellonode
-    notify: appzdev@cloudbourne.co
+    notify: akanade@ecloudcontrol.com
 
 build:
     version: 0.1
@@ -9,20 +9,20 @@ build:
     build_file: none
     output_files: output/*.zip
     image_template: node-10.22
-    image_name: alpha/nodejs-helloworld
+    image_name: abhikanade-cc/nodejs-helloworld
 
 deploy:
-    context: alpha/DEV
+    context: abhikanade-cc/DEV
     replicas: 1
     port:
     - 8080
     - 80
     
 monitor:
-    notify: appzops@cloudbourne.co
+    notify: akanade@ecloudcontrol.com
 
 properties:
     page_title: "React-bootstrap + nodejs-express App"
-    site_url: "https://hellonodejs.appzclient.com/"
-    revision: 13
+    site_url: "https://hellonodejs.038d6d26.lowtouch.cloud/"
+    revision: 25
     page_color: Blue
