--- a/appz.yml
+++ b/appz.yml
@@ -22,7 +22,7 @@ monitor:
     notify: akanade@ecloudcontrol.com
 
 properties:
-    page_title: "React-bootstrap + nodejs-express App"
+    page_title: "React-bootstrap + nodejs-express App 0503"
     site_url: "https://hellonodejs.038d6d26.lowtouch.cloud/"
     revision: 25
     page_color: Blue
